--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "Api para reserva de mesas",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node"
+    "start": "nodemon --exec babel-node src/index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "Grupo",
   "license": "ISC",
