--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "alertifyjs": "^1.13.1",
+    "angular-ng-autocomplete": "^2.0.5",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.4.0",
