--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
