--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.0.1",
+    "html-to-pdfmake": "^2.2.4",
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
